--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -94,13 +94,16 @@
 }
 
 #right_menu {
+  position: fixed;
+  z-index: 2;
   float: right;
   display: table-row;
   padding: 0;
   margin: 0;
-  left: 800px;
   height: 42px;
+  right: 0px;
   width: 280px;
+  left: 1050px;
   list-style-type: none;
 }
 
@@ -133,6 +136,8 @@
   text-align: center;
   font-weight: bold;
   line-height: 27px;
+  font-size: 12.5px;
+  color: white;
 }
 
 #right_menu #gravatar_wrapper #user_name {
@@ -194,7 +199,7 @@
   background-color: rgb(255, 255, 255);
   border: thin solid rgb(193, 193, 193);
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 2;
+  z-index: 3;
 }
 
 .dropdown-content ul li div {
